analysis/spring-framework/step_1/logs/56-928c541.log
Exception in thread "DisconnectableInputStream source reader" org.gradle.api.UncheckedIOException: java.io.IOException: Bad file descriptor
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:57)
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:40)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:125)
	at java.lang.Thread.run(Thread.java:748)
Caused by: java.io.IOException: Bad file descriptor
	at java.io.FileInputStream.readBytes(Native Method)
	at java.io.FileInputStream.read(FileInputStream.java:255)
	at java.io.BufferedInputStream.fill(BufferedInputStream.java:246)
	at java.io.BufferedInputStream.read1(BufferedInputStream.java:286)
	at java.io.BufferedInputStream.read(BufferedInputStream.java:345)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:96)
	... 1 more
> Task :buildSrc:compileJava NO-SOURCE
> Task :buildSrc:compileGroovy
> Task :buildSrc:processResources
> Task :buildSrc:classes
> Task :buildSrc:jar
> Task :buildSrc:assemble
> Task :buildSrc:compileTestJava NO-SOURCE
> Task :buildSrc:compileTestGroovy NO-SOURCE
> Task :buildSrc:processTestResources NO-SOURCE
> Task :buildSrc:testClasses UP-TO-DATE
> Task :buildSrc:test NO-SOURCE
> Task :buildSrc:check UP-TO-DATE
> Task :buildSrc:build
> Task :assemble
> Task :build
> Task :spring-core:cglibRepackJar
> Task :spring-core:objenesisRepackJar
> Task :spring-jcl:compileKotlin
> Task :spring-jcl:compileJava
> Task :spring-jcl:processResources
> Task :spring-jcl:classes
> Task :spring-jcl:inspectClassesForKotlinIC
> Task :spring-jcl:jar
> Task :spring-core:compileKotlin
> Task :spring-core:compileJava
> Task :spring-core:processResources NO-SOURCE
> Task :spring-core:classes
> Task :spring-core:inspectClassesForKotlinIC
> Task :spring-core:jar
> Task :spring-beans:compileGroovy
> Task :spring-beans:compileKotlin
> Task :spring-beans:compileJava NO-SOURCE
> Task :spring-beans:processResources
> Task :spring-beans:classes
> Task :spring-beans:inspectClassesForKotlinIC
> Task :spring-beans:jar
> Task :spring-aop:compileKotlin
> Task :spring-aop:compileJava
> Task :spring-aop:processResources
> Task :spring-aop:classes
> Task :spring-aop:inspectClassesForKotlinIC
> Task :spring-aop:jar
> Task :spring-aop:sourcesJar
> Task :spring-aop:assemble
> Task :spring-aop:build
> Task :spring-expression:compileKotlin
> Task :spring-expression:compileJava
> Task :spring-expression:processResources
> Task :spring-expression:classes
> Task :spring-expression:inspectClassesForKotlinIC
> Task :spring-expression:jar
> Task :spring-instrument:compileKotlin
> Task :spring-instrument:compileJava
> Task :spring-instrument:processResources NO-SOURCE
> Task :spring-instrument:classes
> Task :spring-instrument:inspectClassesForKotlinIC
> Task :spring-instrument:jar
> Task :spring-context:compileKotlin
> Task :spring-context:compileJava
> Task :spring-context:compileGroovy NO-SOURCE
> Task :spring-context:processResources
> Task :spring-context:classes
> Task :spring-context:inspectClassesForKotlinIC
> Task :spring-context:jar
> Task :spring-tx:compileKotlin
> Task :spring-tx:compileJava
> Task :spring-tx:processResources
> Task :spring-tx:classes
> Task :spring-tx:inspectClassesForKotlinIC
> Task :spring-tx:jar
> Task :spring-jdbc:compileKotlin
> Task :spring-jdbc:compileJava
> Task :spring-jdbc:processResources
> Task :spring-jdbc:classes
> Task :spring-jdbc:inspectClassesForKotlinIC
> Task :spring-jdbc:jar
> Task :spring-context-support:compileKotlin
> Task :spring-context-support:compileJava
> Task :spring-context-support:processResources
> Task :spring-context-support:classes
> Task :spring-context-support:inspectClassesForKotlinIC
> Task :spring-context-support:jar
> Task :spring-oxm:compileKotlin
> Task :spring-oxm:compileJava
> Task :spring-oxm:processResources
> Task :spring-oxm:classes
> Task :spring-oxm:inspectClassesForKotlinIC
> Task :spring-oxm:jar
> Task :spring-web:compileKotlin
> Task :spring-web:compileJava
> Task :spring-web:processResources
> Task :spring-web:classes
> Task :spring-web:inspectClassesForKotlinIC
> Task :spring-web:jar
> Task :spring-orm:compileKotlin
> Task :spring-orm:compileJava
> Task :spring-orm:processResources NO-SOURCE
> Task :spring-orm:classes
> Task :spring-orm:inspectClassesForKotlinIC
> Task :spring-orm:jar
> Task :spring-aspects:compileKotlin
> Task :spring-aspects:compileJava
> Task :spring-aspects:processResources
> Task :spring-aspects:classes
> Task :spring-aspects:inspectClassesForKotlinIC
> Task :spring-aspects:jar
> Task :spring-aspects:sourcesJar
> Task :spring-aspects:assemble
> Task :spring-aspects:build
> Task :spring-beans:sourcesJar
> Task :spring-beans:assemble
> Task :spring-beans:build
> Task :spring-build-src:assemble UP-TO-DATE
> Task :spring-build-src:build
> Task :spring-context:sourcesJar
> Task :spring-context:assemble
> Task :spring-context:build
> Task :spring-context-indexer:compileKotlin
> Task :spring-context-indexer:compileJava
> Task :spring-context-indexer:processResources
> Task :spring-context-indexer:classes
> Task :spring-context-indexer:inspectClassesForKotlinIC
> Task :spring-context-indexer:jar
> Task :spring-context-indexer:sourcesJar
> Task :spring-context-indexer:assemble
> Task :spring-context-indexer:build
> Task :spring-context-support:sourcesJar
> Task :spring-context-support:assemble
> Task :spring-context-support:build
> Task :spring-core:sourcesJar
> Task :spring-core:assemble
> Task :spring-core:build
> Task :spring-expression:sourcesJar
> Task :spring-expression:assemble
> Task :spring-expression:build
> Task :spring-framework-bom:assemble UP-TO-DATE
> Task :spring-framework-bom:build
> Task :spring-instrument:sourcesJar
> Task :spring-instrument:assemble
> Task :spring-instrument:build
> Task :spring-jcl:sourcesJar
> Task :spring-jcl:assemble
> Task :spring-jcl:build
> Task :spring-jdbc:sourcesJar
> Task :spring-jdbc:assemble
> Task :spring-jdbc:build
> Task :spring-messaging:compileKotlin

> Task :spring-messaging:compileJava FAILED
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/support/MonoToListenableFutureAdapter.java:32: error: cannot find symbol
public class MonoToListenableFutureAdapter<T> extends AbstractMonoToListenableFutureAdapter<T, T> {
                                                      ^
  symbol: class AbstractMonoToListenableFutureAdapter
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/ReactorNettyTcpClient.java:174: error: incompatible types: cannot infer type arguments for MonoToListenableFutureAdapter<>
		return new MonoToListenableFutureAdapter<>(connectMono);
		                                        ^
    reason: no instance(s) of type variable(s) T exist so that MonoToListenableFutureAdapter<T> conforms to ListenableFuture<Void>
  where T is a type-variable:
    T extends Object declared in class MonoToListenableFutureAdapter
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/ReactorNettyTcpClient.java:200: error: incompatible types: cannot infer type arguments for MonoToListenableFutureAdapter<>
		return new MonoToListenableFutureAdapter<>(connectMono);
		                                        ^
    reason: no instance(s) of type variable(s) T exist so that MonoToListenableFutureAdapter<T> conforms to ListenableFuture<Void>
  where T is a type-variable:
    T extends Object declared in class MonoToListenableFutureAdapter
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/ReactorNettyTcpClient.java:206: error: incompatible types: cannot infer type arguments for MonoToListenableFutureAdapter<>
		return new MonoToListenableFutureAdapter<>(Mono.error(ex));
		                                        ^
    reason: no instance(s) of type variable(s) T#1,T#2 exist so that MonoToListenableFutureAdapter<T#1> conforms to ListenableFuture<Void>
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in class MonoToListenableFutureAdapter
    T#2 extends Object declared in method <T#2>error(Throwable)
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/ReactorNettyTcpClient.java:255: error: incompatible types: cannot infer type arguments for MonoToListenableFutureAdapter<>
		return new MonoToListenableFutureAdapter<>(result);
		                                        ^
    reason: no instance(s) of type variable(s) T exist so that MonoToListenableFutureAdapter<T> conforms to ListenableFuture<Void>
  where T is a type-variable:
    T extends Object declared in class MonoToListenableFutureAdapter
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/support/MonoToListenableFutureAdapter.java:38: error: method does not override or implement a method from a supertype
	@Override
	^

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-messaging:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 34s
87 actionable tasks: 87 executed
